Photo Upload was broken in two lines. Now It is fixed

--- a/webapp/web/css/uploadImages.css
+++ b/webapp/web/css/uploadImages.css
@@ -8,7 +8,7 @@
     padding: 15px;
 }
 #photoUploadDefaultImage{
-    width: 120px;
+    width: 130px;
     float: left;
 }
 #photoUploadDefaultImage img{
@@ -17,7 +17,7 @@
 #photoUploadForm{
     width: 280px;
     float: left;
-    padding-left: 15px;
+    padding-left: 25px;
     margin-left: 1.2em;
     margin-top: 30px;
     padding-top: 15px;
